Always seek back to the beginning of a regular directory, even if the previous seek location was 0.  Without this, readdir() would see dd_loc of zero and call getdirentries() which would start reading entries at the current seek location of the directory ignoring the first batch of entries.  Also, rewinddir() should always seek so that it reads the directory from the beginning to get updated entries.

PR:		192935
Reported by:	iron@mail.ua
MFC after:	3 days


git-svn-id: svn+ssh://svn.freebsd.org/base/head@271048 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f